RESOLVED FIXED270919
REGRESSION (274873@main): Audio is not anchored to WKWebView's spatial location
https://bugs.webkit.org/show_bug.cgi?id=270919
Summary REGRESSION (274873@main): Audio is not anchored to WKWebView's spatial location
Andy Estes
Reported 2024-03-13 11:11:05 PDT
SSIA
Attachments
Andy Estes
Comment 1 2024-03-13 11:11:18 PDT
Andy Estes
Comment 2 2024-03-13 11:17:07 PDT
EWS
Comment 3 2024-03-13 23:44:55 PDT
Committed 276074@main (81afed49cdfe): <https://commits.webkit.org/276074@main> Reviewed commits have been landed. Closing PR #25826 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.